--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>To do list</title>
+    <title>To do lists</title>
   </head>
   <body>
     <div class="container">
       <div id="list-box"></div>
-      <label for="">วันที่</label>
-      <input type="date" id="date"/>
-      <label for="">รายการ</label>
-      <input type="text" id="list">
-      <button id="btn">บันทึก</button>
+      <div class="input">
+        <label for="">วันที่</label>
+        <input type="date" id="date" />
+        <label for="">รายการ</label>
+        <input type="text" id="list" />
+        <button id="btn">บันทึก</button>
+      </div>
     </div>
 
     <script src="script.js"></script>
