--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>To do lists</title>
   </head>
   <body>
-    <div class="container">
-      <div id="list-box"></div>
-      <div class="input">
-        <label for="">วันที่</label>
-        <input type="date" id="date" />
-        <label for="">รายการ</label>
-        <input type="text" id="list" />
-        <button id="btn">บันทึก</button>
+    <div class="big-container">
+      <h1>รายการที่ต้องทำ</h1>
+      <div class="container">
+        <div id="list-box"></div>
+        <div class="input">
+          <label for="">วันที่</label>
+          <input type="date" id="date" />
+          <label for="">รายการ</label>
+          <input type="text" id="list" />
+          <button id="btn">บันทึก</button>
+        </div>
       </div>
     </div>
 
